--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -67,3 +67,33 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+/* solutions */
+
+.modal {
+  display: flex;
+  padding: 15px;
+  gap: 12px;
+}
+
+.icon {
+  min-width: 40px;
+}
+
+.middle {
+  display: flex;
+  flex-direction: column;
+}
+
+.header {
+  font-weight: bold;
+}
+
+.text {
+  margin-bottom: 12px;
+}
+
+.top-row {
+  display: flex;
+  justify-content: space-between;
+}
