--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
 body {
   height: 100vh;
@@ -23,4 +23,49 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+/* solution */
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+ul {
+  list-style-type: none;
+  display: flex;
+  justify-content: space-evenly;
+  padding: 0;
+  gap: 24px;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(126, 126, 126);
+}
+
+.header,
+.footer {
+  display: flex;
+  max-width: 100%;
+  justify-content: space-between;
+  padding: 0px 12px;
+}
+
+.content {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 12px;
+}
+
+.buttons button {
+  padding: 8px;
+  margin: 0px 8px;
+}
+
+.footer {
+  background-color: #eeeeee;
 }
